wk_taa_taaqa/src/objects/TAA_IIB_CreateCase_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting holds information about Create Case IIB interface</description>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <description>This holds the value for Case Origin which will passed while new case creation</description>
        <inlineHelpText>This holds the value for Case Origin which will passed while new case creation</inlineHelpText>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIB_Service_URL__c</fullName>
        <description>This holds the URL of IIB endpoint of create case interface</description>
        <inlineHelpText>This holds the URL of IIB endpoint of create case interface</inlineHelpText>
        <label>IIB Service URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LoggingFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This holds the logging flag</description>
        <inlineHelpText>This holds the logging flag</inlineHelpText>
        <label>Logging Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceVersion__c</fullName>
        <description>Service Version</description>
        <inlineHelpText>Service Version : V4</inlineHelpText>
        <label>Service Version</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <description>This holds Source System Name</description>
        <inlineHelpText>This holds Source System Name</inlineHelpText>
        <label>Source System Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionMonitoringFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This holds transaction monitoring flag (for IIB)</description>
        <inlineHelpText>This holds transaction monitoring flag (for IIB)</inlineHelpText>
        <label>Transaction Monitoring Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>TAA IIB Create Case Credentials</label>
</CustomObject>